# perf-oriented-dev

./: .gitignore  README.md  matrix_tutorial.md
exercises/: sheet_01.md  sheet_02.md  sheet_03.md  sheet_04.md  sheet_05.md  sheet_06.md  sheet_07.md  sheet_08.md  sheet_09.md  sheet_1.md  sheet_10.md  sheet_11.md  sheet_12.md  sheet_2.md  sheet_4.md  sheet_5.md  sheet_6.md  sheet_7.md
larger_samples/: README.md
larger_samples/npb_bt/: CMakeLists.txt
larger_samples/npb_bt/src/: bt.c
larger_samples/npb_bt/src/a/: npbparams.h
larger_samples/npb_bt/src/b/: npbparams.h
larger_samples/npb_bt/src/c/: npbparams.h
larger_samples/npb_bt/src/s/: npbparams.h
larger_samples/npb_bt/src/w/: npbparams.h
larger_samples/ssca2/: CMakeLists.txt
larger_samples/ssca2/src/sprng2.0/: primes_32.c
lcc3_helpers/: README.md  job_example.sh  modules.sh
lua/: fib.lua
samples/: CMakeLists.txt  README.md
samples/filesearch/: filesearch.c
samples/mmul/: mmul.c
small_samples/delannoy/: delannoy.c
small_samples/filegen/: filegen.c
small_samples/mmul/: mmul.c
small_samples/nbody/: nbody.c
small_samples/qap/: qap.c
sol/1/: benchmark_results_local.csv  script.py  sol1.md
solutions/sheet_01/: exercise_a.sh  job.sh  sheet_01.md
solutions/sheet_01/exercise_b/: delannoy.sh  filegen.sh  filesearch.sh  import pandas as pd.py  mmul.sh  nbody.sh  qap.sh
solutions/sheet_01/exercise_b/output/: delannoy_output.csv  filegen_output.csv  filesearch_output.csv  mmul_output.csv  nbody_output.csv  qap_sizes_output.csv  qap_structures_output.csv
tools/: CMakeLists.txt
tools/load_generator/: Thumbs.db  exec_with_workstation_heavy.sh  loadcapture.c  loadgen.c  loadprofile.c  loadproplot.gnu  loadtest.c  loadutils.c  loadutils.h
tools/load_generator/mc3/: loadprofile_mc3.xlsx  loadprofile_mc3_03.txt  loadprofile_mc3_09.txt  loadprofile_mc3_13.txt  loadprofile_mc3_17.txt  loadprofile_mc3_summary.txt
tools/load_generator/synth/: 0_1_altern_static.txt
tools/load_generator/workstation/: Thumbs.db  sys_load_profile_workstation_excerpt.txt
tools/malloctest/: malloctest.c
